--- a/archives.html
+++ b/archives.html
@@ -17,6 +17,8 @@
 <h1>Archives for DevOps Blog</h1>
 
 <dl>
+    <dt>Wed 06 May 2020</dt>
+    <dd><a href="/my-second-post.html">My Second Post</a></dd>
     <dt>Fri 24 April 2020</dt>
     <dd><a href="/my-first-post.html">My First Post</a></dd>
 </dl>
