Build from 11 pipeline

--- a/archives.html
+++ b/archives.html
@@ -18,6 +18,8 @@
 
 <dl>
     <dt>Wed 06 May 2020</dt>
+    <dd><a href="/my-test-post.html">My Test Post</a></dd>
+    <dt>Wed 06 May 2020</dt>
     <dd><a href="/my-second-post.html">My Second Post</a></dd>
     <dt>Fri 24 April 2020</dt>
     <dd><a href="/my-first-post.html">My First Post</a></dd>
